# adventofcode

./: .gitignore  Main.hs  Readme.md  adventOfCode.cabal  edit  fix  install.sh  migrate  newyear  nextday  run
2015/01-B/: Advent.hs
2015/02-A/: Advent.hs
2015/02-B/: Advent.hs
2015/03-B/: Advent.hs
2015/04-A/: Advent.hs
2015/04-B/: Advent.hs
2015/05-A/: Advent.hs
2015/06-A/: Advent.hs
2015/06-B/: Advent.hs
2015/07-B/: Advent.hs  testinput2
2015/08-A/: Advent.hs
2015/08-B/: Advent.hs
2015/09-B/: Advent.hs
2015/10-A/: Advent.hs
2015/10-B/: Advent.hs
2015/11-A/: Advent.hs
2015/11-B/: Advent.hs
2015/12-B/: Advent.hs
2015/13-A/: Advent.hs
2015/13-B/: Advent.hs
2015/14-A/: Advent.hs
2015/14-B/: Advent.hs
2015/15-A/: Advent.hs
2015/15-B/: Advent.hs
2015/16-A/: Advent.hs
2015/16-B/: Advent.hs
2015/17-A/: Advent.hs
2015/17-B/: Advent.hs
2015/18-A/: Advent.hs
2015/18-B/: Advent.hs
2015/19-A/: Advent.hs
2015/19-B/: Advent.hs  testinput
2015/20-A/: Advent.hs
2015/20-B/: Advent.hs
2015/21-A/: testinput
2015/21-B/: Advent.hs
2015/22-A/: Advent.hs
2015/22-B/: Advent.hs
2015/23-A/: Advent.hs
2015/24-A/: Advent.hs
2015/24-B/: Advent.hs
2015/25-A/: Advent.hs  testinput
2016/01-A/: Advent.hs
2016/02-A/: Advent.hs
2016/02-B/: Advent.hs
2016/03-A/: testinput
2016/03-B/: Advent.hs
2016/05-A/: Advent.hs
2016/05-B/: Advent.hs
2016/06-B/: Advent.hs
2016/07-B/: Advent.hs
2016/08-A/: Advent.hs
2016/09-B/: Advent.hs
2016/10-A/: Advent.hs
2016/10-B/: Advent.hs
2020/: nextpart
2020/01-A/: Advent.hs
2020/01-B/: Advent.hs
2020/02-B/: Advent.hs
2020/03-A/: Advent.hs
2020/04-B/: Advent.hs
2020/05-A/: Advent.hs
2020/05-B/: Advent.hs
2020/06-A/: Advent.hs
2020/06-B/: Advent.hs
2020/07-A/: Advent.hs
2020/07-B/: Advent.hs
2020/08-A/: input
2020/08-B/: Advent.hs
2020/09-B/: Advent.hs
2020/10-A/: Advent.hs
2020/10-B/: Advent.hs
2020/11-A/: Advent.hs
2020/12-B/: Advent.hs
2020/13-A/: Advent.hs
2020/13-B/: Advent.hs
2020/14-A/: Advent.hs
2020/14-B/: Advent.hs
2020/15-A/: Advent.hs
2020/15-B/: Advent.hs
2020/16-A/: Advent.hs
2020/16-B/: Advent.hs
2020/17-A/: Advent.hs
2020/17-B/: Advent.hs
2020/19-A/: Advent.hs
2020/20-A/: Advent.hs
2020/20-B/: Advent.hs
2020/21-A/: Advent.hs
2020/21-B/: Advent.hs
2020/22-A/: Advent.hs
2020/22-B/: Advent.hs
2020/23-A/: Advent.hs
2020/24-B/: Advent.hs
2021/01-A/: Advent.hs
2021/01-B/: Advent.hs
2021/02-A/: Advent.hs
2021/03-B/: Advent.hs
2021/04-A/: Advent.hs
2021/04-B/: Advent.hs
2021/05-A/: Advent.hs
2021/05-B/: Advent.hs
2021/06-B/: Advent.hs
2021/08-A/: testinput
2021/08-B/: Advent.hs
2021/09-A/: Advent.hs
2021/09-B/: Advent.hs
2021/10-A/: Advent.hs
2021/11-A/: Advent.hs
2021/11-B/: Advent.hs
2021/12-A/: Advent.hs
2021/12-B/: Advent.hs
2021/14-A/: Advent.hs
2021/14-B/: Advent.hs
2021/15-A/: Advent.hs
2021/15-B/: Advent.hs
2021/16-A/: Advent.hs
2021/16-B/: Advent.hs
2021/17-A/: Advent.hs
2021/17-B/: Advent.hs
2021/18-A/: Advent.hs
2021/18-B/: Advent.hs
2021/19-A/: Advent.hs
2021/19-B/: Advent.hs
2021/20-A/: Advent.hs
2021/20-B/: Advent.hs
2021/22-A/: Advent.hs
2021/22-B/: Advent.hs
2021/23-A/: Advent.hs
2021/23-B/: Advent.hs
2021/24-A/: Advent.hs
2021/24-B/: Advent.hs
2021/25-A/: Advent.hs
2022/01-A/: Advent.hs
2022/01-B/: Advent.hs
2022/02-A/: Advent.hs
2022/02-B/: Advent.hs
2022/03-A/: Advent.hs
2022/03-B/: Advent.hs
2022/04-A/: Advent.hs
2022/04-B/: Advent.hs
2022/05-A/: Advent.hs
2022/07-A/: Advent.hs
2022/08-A/: Advent.hs
2022/08-B/: Advent.hs
2022/09-B/: Advent.hs
2022/10-B/: Advent.hs
2022/11-A/: Advent.hs
2022/11-B/: Advent.hs
2022/13-B/: Advent.hs
2022/14-A/: Advent.hs
2022/14-B/: Advent.hs  AdventB.hs
2022/15-A/: Advent.hs
2022/15-B/: Advent.hs
2022/16-A/: Advent.hs
2022/17-A/: Advent.hs
2022/17-B/: Advent.hs
2022/18-A/: Advent.hs
2022/18-B/: testinput3
2022/20-A/: Advent.hs
2022/20-B/: Advent.hs
2022/21-B/: AdventWrong.hs
2022/23-B/: Advent.hs
2022/25-A/: Advent.hs
2023/: AoC2023.hs  Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Day19.hs  Day20.hs  Day21.hs  Day22.hs  Day23.hs  Day24.hs  Day25.hs
2023/01-A/: Advent.hs
2023/01-B/: Advent.hs
2023/02-A/: Advent.hs
2023/02-B/: Advent.hs
2023/03-A/: Advent.hs
2023/03-B/: Advent.hs
2023/04-A/: Advent.hs
2023/06-A/: Advent.hs
2023/06-B/: Advent.hs
2023/08-B/: Advent.hs
2023/09-A/: Advent.hs
2023/09-B/: Advent.hs
2023/10-A/: Advent.hs
2023/10-B/: Advent.hs
2023/11-A/: Advent.hs
2023/11-B/: Advent.hs
2023/12-A/: Advent.hs
2023/12-B/: Advent.hs
2023/13-A/: Advent.hs
2023/13-B/: Advent.hs
2023/14-A/: Advent.hs
2023/14-B/: Advent.hs  testinput2
2023/15-B/: Advent.hs
2023/16-A/: Advent.hs
2023/16-B/: Advent.hs
2023/17-A/: Advent.hs
2023/17-B/: Advent.hs
2023/Day17/: Advent.hs
lib/: AoC.hs
lib/AoC/: Bfs.hs  Dijkstra.hs  Grid.hs  Grid3D.hs  Maze.hs  Memoize.hs  Pair.hs  Parsec.hs  Text.hs  Trace.hs  Util.hs
lib/Vdmr/: Dijkstra.hs  Generic.hs  Grid.hs  Grid3D.hs  Memoize.hs  Parsec.hs  Trace.hs
src/: AoC2015.hs  AoC2016.hs  AoC2020.hs  AoC2021.hs  AoC2022.hs  AoC2023.hs  AoC2024.hs  AoC2025.hs  Main.hs
src/AoC2015/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Day19.hs  Day20.hs  Day21.hs  Day22.hs  Day23.hs  Day24.hs  Day25.hs
src/AoC2016/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Day19.hs  Day20.hs  Day21.hs  Day22.hs  Day23.hs  Day24.hs  Day25.hs
src/AoC2020/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  (+19 more)
template/: AoCxxxx.hs  Day01.hs
(+369 files in other folders)
