cabal-version:      2.4
name:               adventOfCode
version:            2023

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             jvdmr
maintainer:         joris@vdmr.be

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
  Readme.md

library vdmr
  hs-source-dirs: lib
  exposed-modules: Vdmr.Generic
                 , Vdmr.Grid
                 , Vdmr.Grid3D
                 , Vdmr.Parsec
                 , Vdmr.Dijkstra
  build-depends: base
               , containers
               , parsec
  default-language: Haskell2010

executable aoc
  main-is: Main.hs
  hs-source-dirs: .
                , 2023
  other-modules: AoC2023, Day01, Day02, Day03, Day04, Day05
               , Day06, Day07, Day08, Day09, Day10, Day11
               , Day12, Day13, Day14, Day15, Day16, Day17
               , Day18, Day19, Day20, Day21, Day22, Day23
               , Day24, Day25
  -- LANGUAGE extensions used by modules in this package.
  other-extensions: FlexibleInstances, TypeSynonymInstances, FlexibleContexts, TypeFamilies 
  build-depends: base
               , cmdargs
               , containers
               , split
               , vdmr
  ghc-options: -threaded
  default-language: Haskell2010
