cabal-version:      2.4
name:               adventOfCode
version:            2024

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             jvdmr
maintainer:         joris@vdmr.be

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
  Readme.md

library vdmr
  hs-source-dirs: lib
  exposed-modules: Vdmr.Generic
                 , Vdmr.Grid
                 , Vdmr.Grid3D
                 , Vdmr.Parsec
                 , Vdmr.Dijkstra
                 , Vdmr.Trace
  build-depends: base
               , containers
               , parsec
  default-language: Haskell2010

executable aoc
  main-is: Main.hs
  hs-source-dirs: src
  other-modules: AoC2015
               , AoC2015.Day01, AoC2015.Day02, AoC2015.Day03, AoC2015.Day04, AoC2015.Day05
               , AoC2015.Day06, AoC2015.Day07, AoC2015.Day08, AoC2015.Day09, AoC2015.Day10
               , AoC2015.Day11, AoC2015.Day12, AoC2015.Day13, AoC2015.Day14, AoC2015.Day15
               , AoC2015.Day16, AoC2015.Day17, AoC2015.Day18, AoC2015.Day19, AoC2015.Day20
               , AoC2015.Day21, AoC2015.Day22, AoC2015.Day23, AoC2015.Day24, AoC2015.Day25
               , AoC2016
               , AoC2016.Day01, AoC2016.Day02, AoC2016.Day03, AoC2016.Day04, AoC2016.Day05
               , AoC2016.Day06, AoC2016.Day07, AoC2016.Day08, AoC2016.Day09, AoC2016.Day10
               , AoC2016.Day11, AoC2016.Day12, AoC2016.Day13, AoC2016.Day14, AoC2016.Day15
               , AoC2016.Day16, AoC2016.Day17, AoC2016.Day18, AoC2016.Day19, AoC2016.Day20
               , AoC2016.Day21, AoC2016.Day22, AoC2016.Day23, AoC2016.Day24, AoC2016.Day25
               , AoC2020
               , AoC2020.Day01, AoC2020.Day02, AoC2020.Day03, AoC2020.Day04, AoC2020.Day05
               , AoC2020.Day06, AoC2020.Day07, AoC2020.Day08, AoC2020.Day09, AoC2020.Day10
               , AoC2020.Day11, AoC2020.Day12, AoC2020.Day13, AoC2020.Day14, AoC2020.Day15
               , AoC2020.Day16, AoC2020.Day17, AoC2020.Day18, AoC2020.Day19, AoC2020.Day20
               , AoC2020.Day21, AoC2020.Day22, AoC2020.Day23, AoC2020.Day24, AoC2020.Day25
               , AoC2021
               , AoC2021.Day01, AoC2021.Day02, AoC2021.Day03, AoC2021.Day04, AoC2021.Day05
               , AoC2021.Day06, AoC2021.Day07, AoC2021.Day08, AoC2021.Day09, AoC2021.Day10
               , AoC2021.Day11, AoC2021.Day12, AoC2021.Day13, AoC2021.Day14, AoC2021.Day15
               , AoC2021.Day16, AoC2021.Day17, AoC2021.Day18, AoC2021.Day19, AoC2021.Day20
               , AoC2021.Day21, AoC2021.Day22, AoC2021.Day23, AoC2021.Day24, AoC2021.Day25
               , AoC2022
               , AoC2022.Day01, AoC2022.Day02, AoC2022.Day03, AoC2022.Day04, AoC2022.Day05
               , AoC2022.Day06, AoC2022.Day07, AoC2022.Day08, AoC2022.Day09, AoC2022.Day10
               , AoC2022.Day11, AoC2022.Day12, AoC2022.Day13, AoC2022.Day14, AoC2022.Day15
               , AoC2022.Day16, AoC2022.Day17, AoC2022.Day18, AoC2022.Day19, AoC2022.Day20
               , AoC2022.Day21, AoC2022.Day22, AoC2022.Day23, AoC2022.Day24, AoC2022.Day25
               , AoC2023
               , AoC2023.Day01, AoC2023.Day02, AoC2023.Day03, AoC2023.Day04, AoC2023.Day05
               , AoC2023.Day06, AoC2023.Day07, AoC2023.Day08, AoC2023.Day09, AoC2023.Day10
               , AoC2023.Day11, AoC2023.Day12, AoC2023.Day13, AoC2023.Day14, AoC2023.Day15
               , AoC2023.Day16, AoC2023.Day17, AoC2023.Day18, AoC2023.Day19, AoC2023.Day20
               , AoC2023.Day21, AoC2023.Day22, AoC2023.Day23, AoC2023.Day24, AoC2023.Day25
               , AoC2024
               , AoC2024.Day01, AoC2024.Day02, AoC2024.Day03, AoC2024.Day04, AoC2024.Day05
               , AoC2024.Day06, AoC2024.Day07, AoC2024.Day08, AoC2024.Day09, AoC2024.Day10
               , AoC2024.Day11, AoC2024.Day12, AoC2024.Day13, AoC2024.Day14, AoC2024.Day15
               , AoC2024.Day16, AoC2024.Day17, AoC2024.Day18, AoC2024.Day19, AoC2024.Day20
               , AoC2024.Day21, AoC2024.Day22, AoC2024.Day23, AoC2024.Day24, AoC2024.Day25
  -- LANGUAGE extensions used by modules in this package.
  other-extensions: FlexibleInstances, TypeSynonymInstances, FlexibleContexts, TypeFamilies 
  build-depends: base
               , cmdargs
               , containers
               , split
               , vdmr
  ghc-options: -threaded
  default-language: Haskell2010
